# Firelink-downloader

./: .gitignore  .gitmodules  CHANGELOG.md  CROSS_PLATFORM_CHECKLIST.md  INTERACTION_REVIEW.md  Makefile  Package.resolved  Package.swift  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  YouTube_media_download_handoff.md  appcast.xml  debug_ytdlp.py  engine-sources.lock.json  engines.lock.json  fix_app.cjs  generate_preview.py  hook.py  implementation_plan.md  index.html  package-lock.json  package.json  process_icon.py  revert_js.py  run_test_lib.py  test.swift  test_27.json  test_fetch.py  test_invoke.cjs  test_parse.cjs  test_regex.rs  test_ytdlp_rust  test_ytdlp_rust.rs  vite.config.ts
.github/workflows/: ci.yml  release.yml
Resources/: AppIcon.icns
Scripts/: create_app_bundle.sh  create_dmg.sh  fix_table.py  fix_table_2.py  fix_table_final.py  remove_doubleclick.py  verify.sh
Sources/Firelink/: AddDownloadsView.swift  AppSettings.swift  Aria2DownloadEngine.swift  BinaryDownloader.swift  ChunkMapView.swift  ContentView.swift  DownloadController.swift  DownloadMetadataFetcher.swift  DownloadPropertiesView.swift  DownloadTable.swift  FileClassifier.swift  FirelinkApp.swift  GatekeeperConfig.swift  KeychainCredentialStore.swift  LocalExtensionServer.swift  MediaDetector.swift  MediaDownloadEngine.swift  MediaEngineManager.swift  MediaExtractionEngine.swift  MediaInspectorCard.swift  MediaInspectorInlineView.swift  Models.swift  SchedulerView.swift  (+7 more)
scripts/: before-tauri-build.js  check-updates.js  engine-payload-integrity.js  engine-payload-integrity.node-test.js  provision-engines.js  repack-linux-appimage-engines.js  smoke-packaged-app.js  stage-engines.js  verify-binaries.js  verify-linux-packages.js  verify-linux-packages.node-test.js  verify-macos-signing.js  window-capabilities.node-test.js
src/: App.css  App.tsx  ErrorBoundary.tsx  index.css  ipc.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: aria2c-aarch64-apple-darwin
src-tauri/binaries/_internal/: libssl.3.dylib
src-tauri/binaries/_internal/curl_cffi-0.15.0.dist-info/: RECORD  direct_url.json
src-tauri/binaries/aria2-libs/: legacy.dylib
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: Firelink.appdata.xml
src-tauri/src/: commands.rs  db.rs  download.rs  download_ownership.rs  engines.rs  error.rs  extension_server.rs  ipc.rs  lib.rs  main.rs  parity.rs  platform.rs  process.rs  queue.rs  retry.rs  scheduler.rs  settings.rs  storage.rs
src-tauri/tests/: README.md  download_engine.rs  queue_manager.rs
(+154 files in other folders)
